{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 36,
  "lineage": "c3080865-6b7a-21d9-14b7-34495631f0b2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02892a4ea9bfa2192",
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:instance/i-06295a971734df5fb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06295a971734df5fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "common_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-052c79d8c83e916ee",
            "private_dns": "ip-10-0-0-193.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.193",
            "public_ip": "54.178.114.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bb5236b15d92eb89",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0afa8bbef278b5d4e",
            "tags": {
              "Name": "tf-task12-ec2-pub-1"
            },
            "tags_all": {
              "Name": "tf-task12-ec2-pub-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0216c765fe6e22289"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.pub_sbn",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:internet-gateway/igw-0a86b7f25d1b2f1b5",
            "id": "igw-0a86b7f25d1b2f1b5",
            "owner_id": "296066267476",
            "tags": {
              "Name": "tf-task12-igw}"
            },
            "tags_all": {
              "Name": "tf-task12-igw}"
            },
            "vpc_id": "vpc-0a3fb632dd3a0bafe"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a86b7f25d1b2f1b5",
            "id": "r-rtb-053524b6e0b967f3c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-053524b6e0b967f3c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:route-table/rtb-053524b6e0b967f3c",
            "id": "rtb-053524b6e0b967f3c",
            "owner_id": "296066267476",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf-task12-rtb}"
            },
            "tags_all": {
              "Name": "tf-task12-rtb}"
            },
            "vpc_id": "vpc-0a3fb632dd3a0bafe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dff68559faeb05ef",
            "route_table_id": "rtb-053524b6e0b967f3c",
            "subnet_id": "subnet-0afa8bbef278b5d4e"
          },
          "dependencies": [
            "aws_route_table.rtb",
            "aws_subnet.pub_sbn",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:security-group/sg-0216c765fe6e22289",
            "description": "Allow inbound traffic ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound allowed rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0216c765fe6e22289",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allowed inbound http acces",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allowed inbound ssh acces",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              }
            ],
            "name": "ec2_sg",
            "name_prefix": "",
            "owner_id": "296066267476",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-task12-sg-ec2"
            },
            "tags_all": {
              "Name": "tf-task12-sg-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3fb632dd3a0bafe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sbn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:subnet/subnet-0afa8bbef278b5d4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0afa8bbef278b5d4e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296066267476",
            "tags": {
              "Name": "tf-task12-pub-sbn-1a"
            },
            "tags_all": {
              "Name": "tf-task12-pub-sbn-1a"
            },
            "vpc_id": "vpc-0a3fb632dd3a0bafe"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:vpc/vpc-0a3fb632dd3a0bafe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-002419a5bdc1a22da",
            "default_route_table_id": "rtb-0dc5c27faee415748",
            "default_security_group_id": "sg-0f7a3e459496b2dce",
            "dhcp_options_id": "dopt-053c0fa1f2f5deb1b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a3fb632dd3a0bafe",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dc5c27faee415748",
            "owner_id": "296066267476",
            "tags": {
              "Name": "tf-task12-vpc"
            },
            "tags_all": {
              "Name": "tf-task12-vpc"
            }
          }
        }
      ]
    }
  ]
}